# evoke-martin

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DOMAIN.md  README.md  REUSE.toml  USAGE.md  build.rs  bundle-camping.toml  bundle.toml  record.sh  rustfmt.toml  splat.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  dependabot-automerge.yml
LICENSES/: LicenseRef-BornHack.txt  LicenseRef-Maali.txt
assets/: aegg-card.compose  aegg-flow.seq  aegg-show.seq  bg.wgsl  bitterbal.mtl  bornhack.dae  bornhack.glb  defeest.dae  defeest.glb  demo-show.seq  demo.seq  demo.show  greetings.seq  greetings.txt  layer_depths.py  logo-check.compose  mesh-stage.compose  morph-show.seq  op-de-camping-ci.show  op-de-camping.show  rain.txt  release.seq  score.txt  show.seq  smooth_cylinders.py  smooth_cylinders_dae.py  swarm-show.seq  tropical.txt  vrolijk.show
assets/examples/: deforms.show
dogdemo/: Cargo.toml  USAGE.md
dogdemo/src/: main.rs
parts/: pen-write-signature.seq
pipeline/: AERIAL-CITIES.md  bundle.sh  city-splat.sh  crop-splat.py  fetch-demo-assets.sh  gen-demo-splats.py  mesh-splat.sh  overnight-demo.sh  release.sh  render_orbit.py  score_to_midi.py  splat.sh  svg_extrude_logo.py  svg_import.py
productions/camping/: SHOWBOOK.md  (+1 more)
src/: audio.rs  background.rs  bundle.rs  camera.rs  capture.rs  envvar.rs  glb.rs  loader.rs  main.rs  mcp.rs  mesh.rs  morph.rs  music.rs  score.rs  serve.rs  show.rs  splat_image.rs  text.rs  validate.rs  waypoints.rs
(+23 files in other folders)
